src/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  letter-spacing: -0.6px;
}

html,
body,
#root {
  width: 100%;
  height: 100%;
  overflow-x: auto;
  font-family:
    -apple-system,
    BlinkMacSystemFont,
    Segoe UI,
    Roboto,
    Helvetica Neue,
    Arial,
    sans-serif,
    Apple Color Emoji,
    Segoe UI Emoji;
}

#root {
  position: relative;
}

.main {
  width: 100%;
  min-width: 320px;
  height: auto;
  min-height: max(640px, 100%);
  overflow-x: auto;
  display: flex;
  justify-content: center;
  background-color: white;
}

/* Modal */
.ReactModal__Overlay {
  opacity: 0;
  transition: opacity 200ms ease-in-out;
}

.ReactModal__Overlay--after-open {
  opacity: 1;
}

.ReactModal__Overlay--before-close {
  opacity: 0;
}

/* Swiper */
.swiper-pagination {
  --swiper-pagination-bottom: auto;
  --swiper-pagination-top: 8px;
  --swiper-pagination-color: white;
  text-align: left !important;
  padding-left: 16px;
}

@layer base {
  button,
  input,
  textarea {
    @apply outline-none;
  }
}

@layer components {
  /* Layout */
  .mobile-view {
    @apply flex-1 w-full max-w-[850px] bg-white flex flex-col justify-start items-stretch;
  }

  .desktop-view {
    @apply absolute left-0 top-0 w-auto min-w-full h-auto min-h-full pt-20 bg-white flex justify-center z-[10000];
  }

  .desktop-view-content {
    @apply w-[1280px] h-auto min-h-full mx-auto flex flex-col justify-start items-stretch;
  }

  .flow-chart-view {
    @apply absolute left-0 top-0 w-auto min-w-full h-auto min-h-full pt-14 bg-white flex justify-center z-[10000];
  }

  .flow-chart-view-content {
    @apply w-full h-auto min-h-full mx-auto flex flex-col justify-start items-stretch;
  }

  /* Scroll Bar */
  ::-webkit-scrollbar {
    @apply w-1.5 h-1.5;
  }
  ::-webkit-scrollbar-track,
  ::-webkit-scrollbar-track:horizontal {
    @apply bg-transparent;
  }
  ::-webkit-scrollbar-thumb,
  ::-webkit-scrollbar-thumb:horizontal {
    @apply bg-black-300 rounded-[8px];
  }

  /* Loader */
  .spinning-loader div {
    animation: spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  }
  .spinning-loader div:nth-child(1) {
    animation-delay: -0.45s;
  }
  .spinning-loader div:nth-child(2) {
    animation-delay: -0.3s;
  }
  .spinning-loader div:nth-child(3) {
    animation-delay: -0.15s;
  }
  @keyframes spinner {
    0% {
      transform: rotate(0deg);
    }
    100% {
      transform: rotate(360deg);
    }
  }
}

